# Chronon3d

./: .clang-format  .clang-tidy  .git_tmp_stage4_hardening_msg.txt  .gitignore  AGENTS.md  ARCHITECTURE.md  BUILDING.md  CHANGELOG.md  CHECKLIST.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  IMPROVEMENTS.md  LICENSE  ORIENTATION.md  README.md  ROADMAP.md  build-fast.sh  build_chronon3d.bat  build_fast.ps1  build_output.txt  build_step2.bat  build_tests.ps1  chronon-linux.sh  chronon-watch.ps1  chronon-win.ps1  chronon.toml  code_first_smoke.ppm  configure.bat  convert_textspec_to_textdefinition.py  expression_test.specscene  migrate_text_api.py  path.json  replace_script.py  replace_span.py  run_dashboard.py  start_telemetry.sh  test_buffy.txt  test_chrome.py  test_out.txt  (+7 more)
apps/chronon3d_cli/: CMakeLists.txt  cli_context.hpp  cli_init.hpp  cli_utils.cpp  command_batch.cpp  command_bench.cpp  command_graph.cpp  command_info.cpp  command_list.cpp  command_registry.cpp  command_registry.hpp  command_render.cpp  command_video.cpp  command_watch.cpp  commands.cpp  commands.hpp  main.cpp  proof_suites.cpp  proof_suites.hpp  register_compositions.hpp  register_content_compositions.cpp  register_dev_compositions.cpp  register_runtime_compositions.cpp  templates_dir.hpp.in
content/: CMakeLists.txt  animation_compositions.cpp  animation_compositions.hpp  register_2d5_content.cpp  register_anims_content.cpp  register_content_modules.cpp  register_content_modules.hpp  register_effects_content.cpp  register_grid_content.cpp  register_images_content.cpp  register_minimalist_content.cpp  register_shapes_content.cpp  register_text_content.cpp
content/2d5/: CMakeLists.txt  two_point_five_d_compositions.cpp  two_point_five_d_module.cpp
content/ImportantWords/: CMakeLists.txt  important_words_animations.cpp  important_words_module.cpp  important_words_theme.hpp
content/Minimalist/: CMakeLists.txt  minimalist_animations.cpp  minimalist_clean_quote.cpp  minimalist_focus_quote.cpp  minimalist_hero_explainer.cpp  minimalist_image_presets.cpp  minimalist_module.cpp  minimalist_phrase_float.cpp  minimalist_presets_showcase.cpp  minimalist_scale_explainer.cpp  minimalist_theme.hpp
content/SpecialNames/: CMakeLists.txt  special_names_animations.cpp  special_names_animations.hpp  special_names_module.cpp
content/ae_parity/: ae_cam_scenes.cpp  ae_cam_scenes.hpp  register_ae_parity_compositions.cpp  register_ae_parity_compositions.hpp
content/anims/: CMakeLists.txt  animation_compositions.cpp  anims_module.cpp
content/backgrounds/: grid_clean.cpp  grid_clean.hpp
content/certification/: cert_compositing.cpp  cert_compositing.hpp  cert_determinism.cpp  cert_determinism.hpp  cert_long_text.cpp  cert_lower_third.cpp  cert_multilingual.cpp  cert_render_runtime.cpp  cert_render_runtime.hpp  cert_timeline.cpp  cert_timeline.hpp  cert_title.cpp  cert_title.hpp  certification_descriptor.hpp
content/common/: animation_helpers.hpp  background_helpers.hpp  text_helpers.hpp  text_reveal_helpers.hpp
content/compositions/: chronon_glow_final.cpp  chronon_glow_final.hpp
content/effects/: CMakeLists.txt  effects_module.cpp  glow_01_neon_sign.cpp  glow_02_orb_galaxy.cpp  glow_03_cinematic_text.cpp  glow_04_ui_card.cpp  glow_05_pulse_wave.cpp  glow_06_video_layer.cpp  glow_07_premium_suite.cpp  glow_test_common.hpp  glow_test_compositions.cpp  premium_thumbnail_showcase.cpp
content/grid/: CMakeLists.txt  grid_module.cpp  grid_showcase.cpp
content/images/: CMakeLists.txt  image_compositions.cpp  images_module.cpp
content/launches/: launches.cpp  product_launch.cpp  product_launch.hpp
content/shapes/: CMakeLists.txt  shape_motion_proofs.cpp  shapes_module.cpp
content/text/: CMakeLists.txt  lil_dirk.cpp  text_basic_glow.cpp  text_compositions.cpp  text_effects.cpp  text_fresh_compositions.cpp  text_glow_helpers.hpp  text_helpers.cpp  text_helpers.hpp  text_helpers_centered.hpp  text_helpers_typewriter.hpp  text_intro.cpp  text_layout.cpp  text_module.cpp  text_premium_hero.cpp  text_proofs.cpp  text_registrations.cpp  text_scrolling.cpp  text_theme.hpp  text_titles.cpp  text_typewriter.cpp  typewriter_build.cpp  typewriter_compile.cpp  typewriter_layout.cpp  typewriter_options.hpp
content/text_placement/: text_placement_compositions.cpp  text_placement_compositions.hpp
examples/: CMakeLists.txt  animated_title_card.cpp  axis_debug.cpp  basic_shapes.cpp  blending_showcase.cpp  camera_proof_v1.cpp  code_first_smoke.cpp  depth_roles_proof.cpp  layer_proof.cpp  mask_proof.cpp  moving_rect.cpp  product_launch.json  python_ctypes_render.py  remotion_style_guide.cpp  render_animation.py  text_proof.cpp  transform_proof.cpp
examples/basics/: basic_shapes.cpp  code_first_smoke.cpp  foundation_proof.cpp  moving_rect.cpp
examples/bench_corpus/: bench_corpus_scenes.cpp  bench_corpus_scenes.hpp  corpus_v1.json  run_corpus_v1.sh
src/: CMakeLists.txt  ChrononTestSuite.cpp  chronon_main.cpp  debug_visual_helpers.hpp  main.cpp  sdk_impl_marker.cpp
src/cache/: lru_log.cpp  (+12 more)
tests/: CMakeLists.txt  PR3_COMMIT_MSG.txt  animation_helpers_tests.cmake  animation_tests.cmake  architecture_tests.cmake  authoring_tests.cmake  backends_software_tests.cmake  benchmarks.cmake  breathing_golden_tests.cmake  cache_tests.cmake  chronon_tests.cpp  cli_tests.cmake  compositor_tests.cmake  content_tests.cmake  core_tests.cmake  cross_process_parity_tests.cmake  deterministic_tests.cmake  diagnostic_overlay_tests.cmake  golden_matrix_cinematic_tests.cmake  golden_matrix_emphasis_tests.cmake  golden_matrix_reveal_tests.cmake  golden_matrix_subtitle_tests.cmake  gradient_visual_tests.cmake  graphics_tests.cmake  inspect_text_tests.cmake  introspection_tests.cmake  io_tests.cmake  media_tests.cmake  optimizer_tests.cmake  pipeline_parity_real_tests.cmake  pipeline_parity_tests.cmake  precomp_focus_tests.cmake  preflight_tests.cmake  presets_golden_tests.cmake  render_job_contract_tests.cmake  renderer_tests.cmake  rounded_rect_visual_tests.cmake  sabotage_tests.cmake  safe_area_placement_tests.cmake  scene_tests.cmake  (+34 more)
(+4112 files in other folders)
